--- a/ocaml/fasta/Makefile
+++ b/ocaml/fasta/Makefile
@@ -1,6 +1,6 @@
 compile:
 	cp fasta.ocaml-6.ocaml fasta.ocaml-6.ml
-	ocamlopt -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa fasta.ocaml-6.ml -o fasta.ocaml-6.ocaml_run
+	${COMPILER} -noassert -unsafe -fPIC -nodynlink -inline 100 unix.cmxa fasta.ocaml-6.ml -o fasta.ocaml-6.ocaml_run
 
 measure:
 	sudo modprobe msr
