--- a/python2/fasta/Makefile
+++ b/python2/fasta/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp fasta.python3-3.python3 fasta.python3-3.py
 measure:
 	sudo modprobe msr
-	sudo /opt/rapl/main "${BINARY} -OO fasta.python3-3.py 25000000" Python fasta
+	sudo /opt/rapl/main "${BINARY} -OO fasta.python3-3.py 25000000" /opt/result/python2 fasta
 
 run:
 	${BINARY} -OO fasta.python3-3.py 25000000
