--- a/python2/fasta/Makefile
+++ b/python2/fasta/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO fasta.python3-3.py 25000000
 
 measure:
-	/usr/bin/time -v  ${BINARY} -OO fasta.python3-3.py 25000000 >> >> /opt/result/${TLANG}.txt
+	/usr/bin/time -v  ${BINARY} -OO fasta.python3-3.py 25000000 >> /opt/result/${TLANG}.txt
