--- a/python3/fasta/Makefile
+++ b/python3/fasta/Makefile
@@ -2,7 +2,7 @@ compile:
 	cp fasta.python3-3.python3 fasta.python3-3.py
 
 run:
-	${BINARY} -OO fasta.python3-3.py 25000000
+	${BINARY} -OO fasta.python3-3.py 25000000 >> /opt/results/${TLANG}.txt
 
 measure:
 	/usr/bin/time -v ${BINARY} -OO fasta.python3-3.py 25000000
