--- a/python3/fasta/Makefile
+++ b/python3/fasta/Makefile
@@ -5,4 +5,4 @@ run:
 	${BINARY} -OO fasta.python3-3.py 25000000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} -OO fasta.python3-3.py 25000000
+	/usr/bin/time -v ${BINARY} -OO fasta.python3-3.py 25000000 >> /opt/measures/${TLANG}.txt
