--- a/lua53/fasta/Makefile
+++ b/lua53/fasta/Makefile
@@ -1,14 +1,8 @@
-
 compile:
-
-measure:
-	/opt/rapl/main "${BINARY} fasta.lua-3.lua 25000000" Lua fasta
+	echo "lua53: nothing to do"
 
 run:
 	${BINARY} fasta.lua-3.lua 25000000
 
-mem:
+measure:
 	/usr/bin/time -v  ${BINARY} fasta.lua-3.lua 25000000
-
-valgrind:
-	valgrind --tool=massif --stacks=yes  ${BINARY} fasta.lua-3.lua 25000000
