--- a/perl/fasta/Makefile
+++ b/perl/fasta/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} fasta.perl 25000000
+	${BINARY} fasta.perl 25000000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -v ${BINARY} fasta.perl 25000000
+	/usr/bin/time -v ${BINARY} fasta.perl 25000000 >> /opt/measures/${TLANG}.txt
