--- a/python2/fasta/Makefile
+++ b/python2/fasta/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "python2: nothing to compile"
 
 run:
-	${BINARY} -OO fasta.python3-3.py 25000000 >> /opt/results/${TLANG}.txt
+	${BINARY} -OO fasta.py 25000000 >> /opt/results/${TLANG}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} -OO fasta.python3-3.py 25000000
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} -OO fasta.py 25000000
