--- a/python3/fasta/Makefile
+++ b/python3/fasta/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "nothing to do"
 
 run:
-	${BINARY} -OO fasta.py 25000000 >> /opt/results/${TLANG}.txt
+	${BINARY} -OO fasta.py 25000000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO fasta.py 25000000
