--- a/lua53/fasta/Makefile
+++ b/lua53/fasta/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} fasta.lua-3.lua 25000000 >> /opt/results/${TLANG}.txt
+	${BINARY} fasta.lua-3.lua 25000000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} fasta.lua-3.lua 25000000
