--- a/perl/fasta/Makefile
+++ b/perl/fasta/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} fasta.perl 25000000 >> /opt/results/${TLANG}.txt
+	${BINARY} fasta.perl 25000000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} fasta.perl 25000000
